@@ -1,4 +1,8 @@
-﻿drkns 14.01.2016 22:05:38 +0200 - build 4509
+﻿drkns 15.01.2016 10:04:34 +0200 - build 4510
+
+1. Несистемная функция копирования некорректно обрабатывала разреженные файлы с размером блока более 4 GB.
+
+drkns 14.01.2016 22:05:38 +0200 - build 4509
 
 1. 0003151: Переход на новую строку при сдвиге блока граббера в поточном режиме
 
